(backend) started company route